src/pages/home/Homepage.css
.hero-container {
    background-image: url('./assets/homepage-hero-mobile.png');
    background-size: cover;
    height: 70vh;
    padding: 1.5rem 1rem 3rem 1rem;
    color: white;
}

.hero-header {
    width: 90%;
    flex-shrink: 0;
}

.hero-container h1 {
    font-family: 'Abhaya Libre', serif;
    font-size: 3.25rem;
    font-weight: 400;
    line-height: 105.8%;
    text-align: left;
    margin: 2rem 1rem;
}

.hero-container h2 {
    font-family: 'Abhaya Libre', serif;
    font-size: 1.5rem;
    font-weight: 400;
    text-align: left;
    letter-spacing: 0.285rem;
    margin: 2rem 3rem;
}

/*-- ABOUT SECTION --*/

.homepage-about-container {
    padding: 4rem .35rem 0 .35rem;
    background: linear-gradient(rgba(58, 45, 67, 0.591), rgb(101, 97, 122));
}

.homepage-about-headline {
    color: #FFF;
    font-family: Quicksand;
    font-size: 2.25rem;
    font-style: normal;
    font-weight: 500;
    letter-spacing: 0.3325rem;
    text-align: left;
    margin: .5rem 1.5rem 2.5rem 1.5rem;
    position: absolute;
    z-index: 100;
}

.homepage-about-headshot {
    width: 70%;
    max-width: 20rem;
    height: auto;
    margin-top: 5rem;
    position: relative;
}

.homepage-about-text {
    margin-bottom: 3rem;
}

.homepage-about-text p {
    color: #FFF;
    font-family: Quicksand;
    font-size: 1rem;
    font-style: normal;
    font-weight: 400;
    line-height: 2rem; 
    letter-spacing: 0.125rem;
    margin: 1.75rem 2rem 1.5rem 2rem;
    text-align: left;
}

/*-- OFFERINGS SECTION --*/

.homepage-offerings-headline {
    background: linear-gradient(rgb(101, 97, 122), rgba(174, 161, 185, 0.573));
    color: rgba(227, 225, 235, 0.947);
    font-family: Abhaya Libre;
    font-size: 5rem;
    font-weight: 400;
    text-align: left;
    margin: 0;
    padding: 2.15rem 1rem 1.75rem 1rem;
}

.homepage-offerings-gallery {
    background-image: url('./assets/homepage-offerings-gallery-background-img.png');
    background-size: cover;
    color: white;
    display: grid;
    grid-template-columns: 30% 30%;
    grid-column-gap: 20%;
    grid-row-gap: 0%;
    padding: 10% 5%;
}

.homepage-offerings-gallery h5 {
    font-family: Quicksand;
    font-weight: 400;
}

.offering-tile img {
    height: 12rem;
    width: 12rem;
    border-radius: 10%;
    filter: saturate(50%);
}

.homepage-offerings-button-container {
    background: rgba(94, 91, 122, 0.587);
}

.homepage-offerings-button-container button {
    border: 2px solid rgba(102, 94, 147, 0.00);
    background: rgba(46, 44, 59, 0.587);
    width: 13rem;
    height: 2.75rem;
    margin: 1.75rem;
    color: #FFF;
    text-align: center;
    font-family: Quicksand;
    font-size: .9rem;
    line-height: 105.8%;
    letter-spacing: 0.2rem;
}

/*-- CONNECT SECTION --*/

.homepage-connect-container {
    background: linear-gradient( rgba(94, 91, 122, 0.587), rgb(174, 161, 185));
    margin-bottom: 0;
}

.homepage-connect-headline  {
    color: rgba(207, 206, 214, 0.874);
    font-family: Abhaya Libre;
    font-size: 5rem;
    font-weight: 400;
    text-align: right;
    margin: 0;
    padding: 2.15rem 1rem 1.75rem 1rem;
}

.homepage-connect-image-container {
    background-image: url('./assets/homepage-connect-section-img.png');
    background-size: cover;
    border: .5rem solid rgba(193, 162, 160, 0.28);
    font-family: Quicksand;
    height: 38rem;
    width: 70%;
    margin: 0 15%;
}

.homepage-connect-image-container h3 {
    color: #FFF;
    font-size: 1rem;
    font-style: normal;
    font-weight: 400;
}

.homepage-connect-image-container button {
    border: 2px solid rgba(57, 55, 70, 0.00);
    background: rgb(89, 85, 107);
    color: #FFF;
    text-align: center;
    font-size: 1.15rem;
    font-family: Quicksand;
    font-weight: lighter;
    line-height: 105.8%;
    letter-spacing: 0.25rem;
    height: 2rem;
}

